--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,6 @@
 # ____REMOVE THIS LINE AFTER RENAMING sample.env to .env ____
 DATABASE_URL=
-SESSION_ID=
+SESSION_ID=Prince~s8ZhyDDC#ePV6CsPr4r-BJrlozdGoLtd5cOv_fqoPZJycB8LZa7Y
 REMOVEBG_KEY=
 PREFIX=.
 MODE=public
