Update and rename sample.env to .env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # ____REMOVE THIS LINE AFTER RENAMING sample.env to .env ____
 DATABASE_URL=
-SESSION_ID=Prince~s8ZhyDDC#ePV6CsPr4r-BJrlozdGoLtd5cOv_fqoPZJycB8LZa7Y
+SESSION_ID=Prince~ppxlADxT#Ug8SuJN53aKZ2rnI-DCrTVyY2h3fBMRLrJ9kBd49Gt8
 REMOVEBG_KEY=
 PREFIX=.
 MODE=public
