--- a/sample.env
+++ b/sample.env
@@ -6,7 +6,7 @@ PREFIX=.
 MODE=public
 AutoReaction=true
 STATUSVIEW=true
-OWNERS=923092668108;PRINCE
+OWNERS=923308163433;FIGHTER313
 antidelete=true
 BOT_NAME=Prince
 DL_MSG=Here is your video
